[package]
name = "ore-relayer-program"
description = "A relayer program for ORE frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_stake"

[features]
no-entrypoint = []
default = []

[dependencies]
mpl-token-metadata.workspace = true
ore-api.workspace = true
ore-relayer-api = { path = "../api" }
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
utils.workspace = true

