[package]
name = "checkores-program"
description = "A blockchain based territory control game"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_stake"

[features]
no-entrypoint = []
default = []

[dependencies]
checkores-api = { path = "../api" }
ore-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
utils.workspace = true

