[package]
name = "ore-relayer"
description = "A relayer program for ORE frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_relayer"

[features]
no-entrypoint = []
default = []

[dependencies]
mpl-token-metadata.workspace = true
ore-api.workspace = true
ore-relayer-api = { path = "../api" }
ore-utils.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true

